crates/htui/tests/snapshots/connection__confirm.snap
---
source: crates/htui/tests/connection.rs
expression: "frame_of(&bench, &section)"
---
  Status         offline · 0s · last dial 10:20:00: failed: connection refused
  DSN            stored — postgres://htui@db.example:5432/htui · sslmode=require
  Mirror         0f1e2d3c4b5a · built 2026-09-15 09:30 · last full refresh 2026-09-15 10:15 · schema
                 3
  Rebuild cache  press Enter or R






















Rebuild the mirror? Survives: the file, schema_version, db_fingerprint, built_at. Goes: the 21
mirrored tables, cache_cursor, last_full_refresh_at. The next refresh pass refills it. y / n
y confirm · n / Esc cancel
