crates/htui/tests/snapshots/connection__empty.snap
---
source: crates/htui/tests/connection.rs
expression: "frame_of(&bench, &section)"
---
  Status         offline · 0s · no dial yet this session
  DSN            not stored
  Mirror         0f1e2d3c4b5a · built 2026-09-15 09:30 · last full refresh 2026-09-15 10:15 · schema
                 3
  Rebuild cache  press Enter or R






















DSN:   (0)
no DSN is stored; type one and press Enter
Enter store · Esc cancel · typed text is never shown
